--- a/dev-build-staging.yml
+++ b/dev-build-staging.yml
@@ -4,51 +4,52 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-  - dev
+- dev
 
 pr: none
 
 pool:
-  vmImage: "ubuntu-latest"
+  vmImage: 'ubuntu-latest'
 
 steps:
-  - task: NodeTool@0
-    inputs:
-      versionSpec: "18.x"
-    displayName: "Install Node.js"
 
-  - task: Npm@1
-    inputs:
-      command: "install"
-    displayName: "npm install"
+- task: NodeTool@0
+  inputs:
+    versionSpec: '18.x'
+  displayName: 'Install Node.js'
 
-  # - script: npm run test
-  #   displayName: "npm test"
-  #   env:
-  #     CI: true
+- task: Npm@1
+  inputs:
+    command: 'install'
+  displayName: "npm install"
 
-  # - task: PublishCodeCoverageResults@1
-  #   inputs:
-  #     codeCoverageTool: 'Cobertura'
-  #     summaryFileLocation: 'coverage/cobertura-coverage.xml'
-  #     reportDirectory: 'coverage'
-  #   displayName: 'Publish Code Coverage'
+# - script: npm run test
+#   displayName: "npm test"
+#   env:
+#     CI: true
 
-  - script: npm run build
-    displayName: "npm build"
+# - task: PublishCodeCoverageResults@1
+#   inputs:
+#     codeCoverageTool: 'Cobertura'
+#     summaryFileLocation: 'coverage/cobertura-coverage.xml'
+#     reportDirectory: 'coverage'
+#   displayName: 'Publish Code Coverage'
+    
+- script: npm run build
+  displayName: "npm build"
 
-  - task: CopyFiles@2
-    inputs:
-      Contents: "_site/**" # Pull the build directory
-      TargetFolder: "$(Build.ArtifactStagingDirectory)"
-  - task: PublishBuildArtifacts@1
-    inputs:
-      PathtoPublish: "$(Build.ArtifactStagingDirectory)/_site" # build files
-      ArtifactName: "drop" # output artifact named drop
-  - task: ArchiveFiles@2
-    inputs:
-      rootFolderOrFile: "$(Build.ArtifactStagingDirectory)"
-      includeRootFolder: true
-      archiveType: "zip"
-      archiveFile: "$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip"
-      replaceExistingArchive: true
+- task: CopyFiles@2
+  inputs:
+    Contents: '_site/**' # Pull the build directory
+    TargetFolder: '$(Build.ArtifactStagingDirectory)'
+- task: PublishBuildArtifacts@1
+  inputs: 
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/_site' # build files
+    ArtifactName: 'drop' # output artifact named drop
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.ArtifactStagingDirectory)'
+    includeRootFolder: true
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+    replaceExistingArchive: true
