--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "prettier": "2.8.3",
     "rollup": "^2.52.2",
     "rollup-plugin-import-css": "^2.0.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.38.1"
+    "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
     "@cagovweb/state-template": "^1.0.0",
