--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "@cagovweb/state-template": "^1.0.0",
+    "@cagovweb/state-template": "^1.1.0-beta.1",
     "csv-parse": "^5.3.6"
   }
 }
