--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cagov-template-v6",
-  "version": "6.1.2",
+  "version": "6.2.0",
   "description": "CA State Web Template",
   "scripts": {
     "watch:js": "rollup --config rollup.config.js --watch",
@@ -24,7 +24,7 @@
     "rollup-plugin-terser": "^7.0.2"
   },
   "dependencies": {
-    "@cagovweb/state-template": "^1.1.0-beta.1",
+    "@cagovweb/state-template": "1.1.0-beta.2",
     "csv-parse": "^5.3.6"
   }
 }
