--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "6.2.0",
   "description": "CA State Web Template",
   "scripts": {
-    "watch:js": "rollup --config rollup.config.js --watch",
-    "watch:eleventy": "npx @11ty/eleventy --serve",
-    "build:js": "rollup --config rollup.config.js",
-    "build:eleventy": "npx @11ty/eleventy",
-    "start": "run-p watch:*",
-    "build": "run-p build:*"
+    "start": "npx @11ty/eleventy --serve",
+    "build": "npx @11ty/eleventy"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +18,6 @@
     "@cagovweb/state-template": "1.1.0-beta.2",
     "csv-parse": "^5.3.6",
     "clean-css": "^5.3.2",
-    "@11ty/eleventy": "^2.0.0",
-    "npm-run-all": "^4.1.5",
-    "rollup": "^2.52.2",
-    "rollup-plugin-terser": "^7.0.2"
+    "@11ty/eleventy": "^2.0.0"
   }
 }
