--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
-    "@cagovweb/state-template": "1.1.0-beta.5",
+    "@cagovweb/state-template": "6.2.0",
     "csv-parse": "^5.3.6",
     "clean-css": "^5.3.2",
     "@11ty/eleventy": "^2.0.0"
