--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cagov-template-v6",
-  "version": "6.2.0",
+  "version": "6.2.1",
   "description": "CA State Web Template",
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
@@ -15,7 +15,7 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
-    "@cagovweb/state-template": "6.2.1-beta.2",
+    "@cagovweb/state-template": "6.2.1",
     "csv-parse": "^5.3.6",
     "clean-css": "^5.3.2",
     "@11ty/eleventy": "^2.0.0"
