--- a/src/_data/legacyComponents.json
+++ b/src/_data/legacyComponents.json
@@ -56,7 +56,7 @@
       "Deprecated_CSS_classes": ""
     },
     {
-      "Legacy_components": "Branding",
+      "Legacy_components": "Branding (structure)",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/structure.html",
       "Scaled_to_V6": "Y",
       "V6_alternative": "Site header",
@@ -232,7 +232,7 @@
       "Deprecated_CSS_classes": ""
     },
     {
-      "Legacy_components": "Footer",
+      "Legacy_components": "Footer (structure)",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/structure.html",
       "Scaled_to_V6": "Y",
       "V6_alternative": "Footer",
@@ -595,13 +595,13 @@
       "Deprecated_CSS_classes": "publication-list\npub-item\nodd\neven\nthumbnail\npub-body\npub-title\npub-tags"
     },
     {
-      "Legacy_components": "Search component",
+      "Legacy_components": "Search (structure)",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/structure.html",
       "Scaled_to_V6": "Y",
       "V6_alternative": "Search",
       "V6_URL": "https://template.webstandards.ca.gov/structure/search.html",
       "Deprecated": "N",
-      "Notes": "Same search component exists in v6. However, in v6 we made the search active (always visible in desktop view) by default, whereas in previous State Web Template versions the search component was inactive by default. In mobile view, the search component don't have seaparate toggle button in v6. But it can be opened with hamburger toggle menu instead.",
+      "Notes": "Same search component exists in v6. However, in v6 we made the search active (always visible in desktop view) by default, whereas in previous State Web Template versions the search component was inactive by default. In mobile view, though, the search component don't have separate toggle button in v6. But it can be opened with hamburger toggle menu instead.",
       "Special_CSS_classes_used": "",
       "Deprecated_CSS_classes": ""
     },
@@ -749,7 +749,7 @@
       "Deprecated_CSS_classes": ""
     },
     {
-      "Legacy_components": "Utility header",
+      "Legacy_components": "Utility header (structure)",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/structure.html",
       "Scaled_to_V6": "Y",
       "V6_alternative": "Utility header",
