--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
+    "@11ty/eleventy": "^2.0.0",
+    "@cagovweb/cal-ds-nav": "^0.0.1-beta2",
     "@cagovweb/state-template": "6.3.1",
-    "csv-parse": "^5.3.6",
-    "@11ty/eleventy": "^2.0.0"
+    "csv-parse": "^5.3.6"
   }
 }
