--- a/src/_data/legacyComponents.json
+++ b/src/_data/legacyComponents.json
@@ -23,7 +23,7 @@
       "Deprecated_CSS_classes": "accordion<br>collapsed<br>panel-collapse"
     },
     {
-      "Legacy_components": "Alett banner",
+      "Legacy_components": "Alert banner",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/sample/alert-banner.html",
       "Scaled_to_V6": "Y",
       "V6_alternative": "Alert",
