--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cagov-template-v6",
-  "version": "6.4.3",
+  "version": "6.5.0",
   "description": "CA State Web Template",
   "scripts": {
     "start": "npx @11ty/eleventy --serve",
@@ -15,8 +15,8 @@
     "prettier": "2.8.3"
   },
   "dependencies": {
-    "@cagovweb/state-template": "6.4.3",
-    "csv-parse": "^5.5.6",
-    "@11ty/eleventy": "^2.0.1"
+    "@11ty/eleventy": "^2.0.1",
+    "@cagovweb/state-template": "^6.5.0",
+    "csv-parse": "^5.5.6"
   }
 }
