Added featured search component page

--- a/src/_data/components.json
+++ b/src/_data/components.json
@@ -29,6 +29,10 @@
       "url": "/components/executive-profile.html"
     },
     {
+      "text": "Featured search",
+      "url": "/components/featured-search.html"
+    },
+    {
       "text": "Form elements",
       "url": "/components/form-elements.html"
     },
