--- a/src/_data/legacyComponents.json
+++ b/src/_data/legacyComponents.json
@@ -257,7 +257,7 @@
       "Legacy_components": "Forms",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/sample/form.html",
       "Scaled_to_V6": "Y",
-      "V6_alternative": "Forms elements",
+      "V6_alternative": "Form elements",
       "V6_URL": "/components/form-elements.html",
       "Deprecated": "N",
       "Notes": "V6 form elements were standardized and simplified.",
