Updated sections legacy content

--- a/src/_data/legacyComponents.json
+++ b/src/_data/legacyComponents.json
@@ -617,6 +617,16 @@
       "Deprecated_CSS_classes": ""
     },
     {
+      "Legacy_components": "Sections",
+      "Legacy_URL": "https://legacy.template.webstandards.ca.gov/sample/sections.html",
+      "Scaled_to_V6": "Y",
+      "V6_alternative": "background utility classes",
+      "V6_URL": "/get-started/css-classes-shortcuts/utility-css-classes.html",
+      "Deprecated": "N",
+      "Notes": "Sections components are now background CSS utility classes in v6",
+      "Special_CSS_classes_used": "section<br>section-default<br>section-understated<br>section-primary<br>section-standout<br>section-inverted<br>collapsed"
+    },
+    {
       "Legacy_components": "Service Tiles",
       "Legacy_URL": "https://legacy.template.webstandards.ca.gov/sample/service-group.html",
       "Scaled_to_V6": "N",
